--- a/wk07_package.html
+++ b/wk07_package.html
@@ -328,7 +328,7 @@ vignette(&#39;math&#39;)</code></pre>
 <h2>Share via <code>github_install()</code></h2>
 <p>Now that you’ve created a complete R package, it’s time to run a git <strong>Commit</strong>, and <strong>Push</strong> to your Github repository. Then you can share a single command for anyone else to install the R package. For my R package, files at <a href="https://github.com/bbest/bbest.github.io/tree/master/mypackage">github.com/bbest/bbest.github.io/mypackage</a>, it would be:</p>
 <pre class="r"><code>devtools::install_github(&#39;bbest/bbest.github.io&#39;, subdir=&#39;mypackage&#39;)</code></pre>
-<p>Notice how the first argument is of the form <code>&lt;owner&gt;/&lt;repository&gt;</code> and the subdirectory of <code>mypackage</code>. For more serious package development, I recommend you dedicate an entire repository so you don’t have to use the <code>subdir</code> argument.</p>
+<p>Notice how the first argument is of the form <code>&lt;owner&gt;/&lt;repository&gt;</code>. For more serious package development, I recommend you dedicate an entire repository so you don’t have to use the <code>subdir</code> argument.</p>
 </div>
 
   </div> <!--span-9-->
