--- a/wk07_package.html
+++ b/wk07_package.html
@@ -227,7 +227,8 @@ cat(
 #&#39; @examples
 #&#39; add(1, 1)
 #&#39; @export
-add &lt;- function(x, y) { x+ y
+add &lt;- function(x, y){ 
+  x+ y
 }&quot;, file=&#39;R/add.R&#39;)
 
 # update R documentation (*.Rd) in manual folder man/ 
