--- a/wk07_package.html
+++ b/wk07_package.html
@@ -242,7 +242,7 @@ add(1,2)
 
 # check documentation
 ?add</code></pre>
-<p>Notice how <code>document()</code> creates the <a href="https://github.com/bbest/bbest.github.io/blob/master/mypackage/R/add.R"><code>man/add.Rd</code></a> (and any other <code>man/*.Rd</code>) files and updates <code>DESCRIPTION</code> and <code>NAMESPACE</code>.</p>
+<p>Notice how <code>document()</code> creates the <a href="https://github.com/bbest/bbest.github.io/blob/master/mypackage/R/add.R"><code>man/add.Rd</code></a> for the <code>add()</code> function (and would other <code>man/*.Rd</code> files for more functions) and updates <code>DESCRIPTION</code> and <code>NAMESPACE</code> files.</p>
 <pre><code>Updating roxygen version in  ~/bbest.github.io/mypackage/DESCRIPTION 
 Writing NAMESPACE
 Writing add.Rd</code></pre>
