--- a/refs.html
+++ b/refs.html
@@ -145,7 +145,7 @@ img {
 
 <div id="header">
 <h1 class="title">References</h1>
-<h4 class="date"><em>2016-02-03 12:12</em></h4>
+<h4 class="date"><em>2016-02-24 18:08</em></h4>
 </div>
 
 
@@ -182,6 +182,7 @@ img {
 <li><a href="http://r4ds.had.co.nz/">R for Data Science</a> <a href="https://github.com/hadley/r4ds"><span class="octicon octicon-mark-github"></span></a> by Garrett Grolemund and Hadley Wickham</li>
 <li><a href="http://adv-r.had.co.nz/">Advanced R</a> <a href="https://github.com/hadley/adv-r"><span class="octicon octicon-mark-github"></span></a> by Hadley Wickham</li>
 <li><a href="http://christophergandrud.github.io/RepResR-RStudio/">Reproducible Research with R and Rstudio</a> by Christopher Gandrud</li>
+<li><a href="http://www.amazon.com/Practical-Data-Science-Nina-Zumel/dp/1617291560/">Practical Data Science with R</a> by Nina Zumel, John Mount and Jim Porzak</li>
 </ul>
 </div>
 <div id="courses" class="section level2">
